[package]
name = "bevy_openal"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alto = "3"
anyhow = "1"
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
claxon = "0.4"
hound = "3"
lewton = "0.10"
minimp3 = "0.5"